# FastAPI-Network-management-tool-backend

./: README.md  alembic.ini  log.txt  pyproject.toml  requirements.txt
app/: conf.py  main.py  outh2.py  schema.py  utils.py
app/NetOps/: generic.py  huawei.py
app/controller/: auth.py  credential.py  device.py  deviceModel.py  deviceType.py  netops.py  site.py  user.py  vlan.py
app/model/: models.py
app/repository/: credential.py  device.py  deviceModel.py  devicetype.py  site.py  user.py  utils.py  vlan.py
migrations/: env.py
migrations/versions/: 01211261db77_auto_generate.py  2ed494e41e98_create_credendials_table.py  472b691c90d8_last.py  64bab30e9014_auto_generate_after_editing.py  d203ef2f7f91_create_users_and_sites_table.py
